fixed results color on dark mode

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -5,7 +5,7 @@
   overflow: hidden;
   background-color: var(--fg-color);
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  color: black;
+  color: var(--text-color);
 }
 
 a,
