--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  --text-color: #000000;
   --bg-color: #e9e9e9;
   --fg-color: rgb(221, 221, 221);
   font-synthesis: none;
@@ -28,6 +29,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --text-color: white;
     --bg-color: #0e0e0e;
     --fg-color: rgb(43, 43, 43);
   }
